syntax = "proto3";

package userpb;

option go_package ="./userpb;userpb";


message User {
    string id = 1;
    string nickname = 2;
    string password = 3;
    string email = 4;
    string avatar = 5;
    float balance = 6;
    string signature = 7;
}

message RegisterRequest {
    User user = 1;
}

message RegisterResponse {
    string token = 1;
    User user = 2;
}


service UserService {
    rpc Register (RegisterRequest) returns (RegisterResponse);
}